syntax = "proto3";

option csharp_namespace = "PhysioBoo.Proto.Users";

message GrpcUser {
	string id = 1;
	string email = 2;
	string phone = 3;
	optional string alternatePhone = 4;
	optional string deletedAt = 6;
}

message GetUsersByIdsResult {
  repeated GrpcUser users = 1;
}

message GetUsersByIdsRequest {
  repeated string ids = 1;
}