syntax = "proto3";

option csharp_namespace = "PhysioBoo.Proto.Users";

import "Users/Model.proto";

service UsersApi {
  rpc GetByIds(GetUsersByIdsRequest) returns (GetUsersByIdsResult);
}